# projet-ppn

./: CMakeLists.txt  Makefile  README.md  gradient.c  gradient.h  train-n.c
1-layer/: 1-layer.h
RESEAU ENTIER BUG/reseau avec fonctionalité obligatoire 1 struct/: log gdb  log valgrind.txt  neuralNetwork.c  neuralNetwork.h
RESEAU ENTIER BUG/reseau complexe avec log/: log gdb  log valgrid  neuralNetwork.c  neuralNetwork.h
SEGFAULT/projet-ppn/: Makefile  README.md  massif.out  massif_report.txt
SEGFAULT/projet-ppn/include/benchmark/: bench.h
SEGFAULT/projet-ppn/include/matrix/: matrix.h
SEGFAULT/projet-ppn/include/networks/: activation.h  mlp_blas.h
SEGFAULT/projet-ppn/src/: main.c
SEGFAULT/projet-ppn/src/benchmark/: bench.c
SEGFAULT/projet-ppn/src/matrix/: matrix.c
SEGFAULT/projet-ppn/src/mnist_reader/: example_use.c
SEGFAULT/projet-ppn/src/networks/: activation.c  mlp_blas.c  mlp_opti.c
docker_config/: Dockerfile
include/benchmark/: bench.h
include/networks/: activation.h  feeding.h  mlp_blas.h
matrix/: matrix.c  matrix.h  matrixOperand.c
matrix_operand/: matrixOperand.c  matrixOperand.h
network/: mlp.c  mlp.h
neural_network/: neuralNetwork.c  neuralNetwork.h
pseudo_method/: gradient.c  test-n.c
script/: autotune.py  autotune_batch.py  get-mnist.sh  result.py
src/: main.c
src/benchmark/: bench.c
src/networks/: activation.c  feeding.c  mlp.c  mlp_blas.c
test/: matrixOperandTest.c  matrixTest.c
